--- a/src/css/feed.css
+++ b/src/css/feed.css
@@ -29,10 +29,12 @@
  }
 
  .home-icon {
-  width: 40px;   /* tamanho do ícone */
-  height: 40px;
-  cursor: pointer; /* muda cursor para indicar que é clicável */
-}
+     width: 40px;
+     /* tamanho do ícone */
+     height: 40px;
+     cursor: pointer;
+     /* muda cursor para indicar que é clicável */
+ }
 
  .navbar h1 {
      font-size: 2rem;
@@ -50,6 +52,28 @@
      border-radius: 10px;
      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
  }
+
+ textarea {
+    width: 100%;
+    height: 150px;
+    padding: 10px;
+    font-size: 14px;
+    border: 1px solid #ddd;
+    border-radius: 6px;
+    resize: vertical;
+    margin-bottom: 18px;
+ }
+
+ .preview {
+     border: 1px solid #ddd;
+     padding: 10px;
+     border-radius: 6px;
+     background: #f8f8f8;
+     min-height: 100px;
+     margin-bottom: 20px;
+    overflow-wrap: break-word;
+ }
+
 
  h2 {
      margin-bottom: 10px;
