--- a/src/css/home.css
+++ b/src/css/home.css
@@ -206,7 +206,7 @@ header > div:last-child {
 
 .side-menu footer {
   padding: 15px 20px;
-  background: #0f172a;
+  background: #080b18;
   color: #fff;
   text-align: center;
   font-size: 0.9rem;
@@ -450,7 +450,7 @@ header > div:last-child {
 .tabs {
   display: flex;
   justify-content: space-around;
-  background: #4d63ff;
+  background: #304b8a;
   color: #fff;
   font-weight: bold;
 }
@@ -463,7 +463,7 @@ header > div:last-child {
 }
 
 .tab.active {
-  background: #303f9f;
+  background: #222d74;
 }
 
 .feed {
