--- a/src/css/news.css
+++ b/src/css/news.css
@@ -4,21 +4,29 @@ body {
     background: #f4f4f4;
     color: #222;
 }
-header {
-    background: #0d8cff;
-    padding: 10px 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: #fff;
+
+.home-icon{
+    height: 40px;
+    width: 40px;
+    cursor: pointer;
 }
-header h1 {
-    font-size: 2rem;
-    margin: 0;
+.navbar {
+    display: flex;
+     justify-content: space-between;
+     align-items: center;
+     background: #1d60a0;
+     padding: 10px 10px;
+     color: white;
 }
 .logo-ic {
-    color: deepskyblue;
-}
+     height: 40px;
+ }
+
+.navbar h1 {
+     font-size: 2rem;
+     margin: 0;
+ }
+ 
 .back-btn {
     background: #ffcc00;
     color: white;
@@ -48,7 +56,7 @@ header h1 {
 }
 .news-title {
     font-size: 2rem;
-    color: #0d8cff;
+    color: #1d60a0;
     margin: 0;
 }
 .news-desc {
@@ -67,7 +75,7 @@ header h1 {
     display: inline-block;
     margin-top: 24px;
     padding: 12px 28px;
-    background: #0d8cff;
+    background: #1d60a0;
     width: 110px;
     color: #fff;
     border-radius: 8px;
