Só atualizei as cores para ficar igual a paleta da home.

--- a/src/css/feed.css
+++ b/src/css/feed.css
@@ -10,7 +10,7 @@
      display: flex;
      justify-content: space-between;
      align-items: center;
-     background: #1d60a0;
+     background: #304b8a;
      padding: 10px 10px;
      color: white;
  }
@@ -43,7 +43,7 @@
      margin: 40px auto;
      padding: 50px;
      border-radius: 10px;
-     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
+     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
  }
 
  textarea {
