--- a/src/css/news.css
+++ b/src/css/news.css
@@ -14,7 +14,7 @@ body {
     display: flex;
      justify-content: space-between;
      align-items: center;
-     background: #1d60a0;
+     background: #304b8a;
      padding: 10px 10px;
      color: white;
 }
